duicontrolpanel (0.12.3~unreleased) unstable; urgency=low

  * New version

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 08 Mar 2011 10:39:57 +0100

duicontrolpanel (0.12.2) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixing iconIds
  * Adding Applications/Installations, and Applications/Manage applications categories

  [ Robert Manner ]
  * Fixes: NB#225161 - Incorrect title on dialog when Settings does not
    respond anymore
  * Fixes: NB#228255 - When reopening the settings application from
    launcher, the previous subview is shown
  * Fixes: NB#220633 - T-coil hearing aid is mentioned in settings main
    menu
  * Fixes: NB#223592 - COREWEB: /usr/bin/duicontrolpanel
    'qt_call_post_routines QApplication::~QApplication
    MApplication::~MApplication cleanup'

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 07 Mar 2011 12:04:04 +0100

duicontrolpanel (0.12.1) unstable; urgency=low

  * New: static (localized) value line (second line) can be specified for the
    applet icon from .desktop file
  * Fixes: translation id appears on category button instead of engineering
    translation in case there is no translation available (ex: meego)

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 02 Mar 2011 14:32:44 +0100

duicontrolpanel (0.12.0) unstable; urgency=low

  [ Sandor Pinter ]
  * Using default loadHints for loading a plugin

  [ Robert Manner ]
  * Fixes: category for "Security" and "Tactile feedback"
  * Fixes: NB#230474 - Order of Settings categories in Settings main
    view needs to be updated
  * Fixes: NB#230505 - 2nd row labels should be removed from Settings
    main view
  * Fixes: NB#230541 - on staging images from week 8 onward, using D-Bus
    call to go directly to applets makes it behave erratically

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 25 Feb 2011 11:09:16 +0100

duicontrolpanel (0.11.8) unstable; urgency=low

  * Fixes: NB#227727 - Applications list in Settings is not sorted