@@ -44,6 +44,7 @@ QString SkeletonBrief::titleText() const
 }
 
 /* The plugin can specify that it has a toggle like this:
+ */
 int SkeletonBrief::widgetTypeID() const
 {
     return DcpWidgetType::Toggle;
@@ -59,7 +60,6 @@ void SkeletonBrief::setToggle (bool toggle)
     m_ToggleState = toggle;
     qDebug() << "Skeleton brief got toggle state:" << toggle;
 }
-*/
 
 void SkeletonBrief::timerEvent(QTimerEvent*)
 {
