@@ -1,8 +1,9 @@
 duicontrolpanel (0.12.3~unreleased) unstable; urgency=low
 
-  * New version
+  * New: control panel can be forced to load the DcpBrief inprocess
+    through ForceInProcessBrief key from the .desktop file
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 08 Mar 2011 10:39:57 +0100
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 08 Mar 2011 16:49:51 +0100
 
 duicontrolpanel (0.12.2) unstable; urgency=low
 
